# OpenModelVisualization

./: README.md
FMUSimulator/: CMakeLists.txt
FMUSimulator/include/: fmuSimulator.h  simulationAPI.h  util.h
FMUSimulator/source/: fmuSimulator.cpp  util.cpp
FMU_UnityPlugin/Assets/Editor/: FMUToolWindow.cs
FMU_UnityPlugin/Assets/Scripts/: FMU_Simulation.cs  FMUshapeBehaviour.cs
